--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
@@ -8,79 +9,44 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
 
     <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
+        <div id="game">
+            <header>
+                <h1>Matching Game</h1>
+            </header>
 
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+            <section class="score-panel">
+                <ul class="stars">
+                    <li><i id="star1" class="fa fa-star"></i></li>
+                    <li><i id="star2" class="fa fa-star"></i></li>
+                    <li><i id="star3" class="fa fa-star"></i></li>
+                </ul>
 
-        	<span class="moves">3</span> Moves
+                <span id="moves" class="moves">0</span> Moves
 
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
+                <div id="restart" class="restart">
+                    <i class="fa fa-repeat"></i>
+                </div>
+            </section>
 
-        <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-        </ul>
+            <ul id="deck" class="deck">
+            </ul>
+        </div>
+        <div id="completed">
+            <h1>Congatutaions! You Won!</h1>
+
+            <diV class="finsh">
+                <span id="tally">with 0 moves and 0 stars.</span>
+                <p>wooooo!</p>
+                <button id="replay"> Play Again!</button>
+            </diV>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
 </body>
+
 </html>
