adding style to winning menu

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
             <ul id="deck" class="deck">
             </ul>
         </div>
-        <div id="completed">
-            <h1>Congatutaions! You Won!</h1>
+        <div id="completed" class="container,win">
+                <i class="fa fa-check-circle-o fa-10x" ></i>
+                
+            <h1  >Congratulations! You Won!</h1>
 
             <diV class="finsh">
-                <span id="tally">with 0 moves and 0 stars.</span>
+                with  <span id="tally"></span> moves and <span id="stars"> </span>stars.
                 <p>wooooo!</p>
-                <button id="replay"> Play Again!</button>
+                <button id="replay" class="replay"> Play Again!</button>
             </diV>
         </div>
     </div>
