make cards shake when there is a incorect match

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <div class="container">
-        <div id="game">
+    <div id="main" class="container">
+        <div id="game" >
             <header>
                 <h1>Matching Game</h1>
             </header>
@@ -35,7 +35,7 @@
             <ul id="deck" class="deck">
             </ul>
         </div>
-        <div id="completed" class="container,win">
+        <div id="completed" class="container win">
                 <i class="fa fa-check-circle-o fa-10x" ></i>
                 
             <h1  >Congratulations! You Won!</h1>
