--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         	</div>
         </section>
 
-        <ul class="deck">
+        <ul id="gameboard" class="deck">
             <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
