add function star rating that changes star icon after enough moves. Gave IDs to all star icons.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i id="star_1" class="fa fa-star"></i></li>
+        		<li><i id="star_2" class="fa fa-star"></i></li>
+        		<li><i id="star_3" class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves">0</span> Moves
