add functionality to reset game button and fixed bug with stopping timer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         	</ul>
 
         	<span class="moves">0</span> Moves
+          - Time: <span class="timer">0</span>s
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
