--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="css/app.css">
+  <meta charset="utf-8">
+  <title>Matching Game</title>
+  <meta name="description" content="">
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
 
-    <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
+  <div class="container">
+    <header>
+      <h1>Matching Game</h1>
+    </header>
 
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i id="star_1" class="fa fa-star"></i></li>
-        		<li><i id="star_2" class="fa fa-star"></i></li>
-        		<li><i id="star_3" class="fa fa-star"></i></li>
-        	</ul>
+    <section class="score-panel">
+      <ul class="stars">
+        <li><i id="star_1" class="fa fa-star star-items"></i></li>
+        <li><i id="star_2" class="fa fa-star star-items"></i></li>
+        <li><i id="star_3" class="fa fa-star star-items"></i></li>
+      </ul>
 
-        	<span class="moves">0</span> Moves
-          - Time: <span class="timer">0</span>s
+      <span class="moves">0</span> Moves - Time: <span class="timer">0</span>s
 
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
+      <div class="restart">
+        <i class="fa fa-repeat"></i>
+      </div>
+    </section>
 
-        <ul class="deck"></ul>
-    </div>
+    <ul class="deck"></ul>
+  </div>
 
-    <script src="js/app.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
