--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -23,7 +23,10 @@
         	</ul>
 
         	<span class="moves">3</span> Moves
-
+            <div class="timer">
+                <h5>Time:</h5>
+                <span class="timernumber">0</span>s
+            </div>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
@@ -80,7 +83,15 @@
             </li>
         </ul>
     </div>
-
+    <div class="gameover" style="display:none">
+        <i class="fa fa-check-circle"></i>
+        <h3>Congratulations! You Won this game in <span class="time"></span>second!</h3>
+        <p>
+            with <span class="moves"></span> Moves and <span class="star"></span><br>
+            Woooooo!
+        </p>
+        <button>Play again!</button>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
