--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -18,20 +20,26 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+            <ul class="stars">
+                <li>
+                    <i class="fa fa-star"></i>
+                </li>
+                <li>
+                    <i class="fa fa-star"></i>
+                </li>
+                <li>
+                    <i class="fa fa-star"></i>
+                </li>
+            </ul>
 
-        	<span class="moves">3</span> Moves
+            <span class="moves">3</span> Moves
             <div class="timer">
                 <h5>Time:</h5>
                 <span class="timernumber">0</span>s
             </div>
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
+                <i class="fa fa-repeat"></i>
+            </div>
         </section>
 
         <ul class="deck">
@@ -87,13 +95,17 @@
     </div>
     <div class="gameover" style="display:none">
         <i class="fa fa-check-circle"></i>
-        <h3>Congratulations! You Won this game in <span class="time"></span>second!</h3>
+        <h3>Congratulations! You Won this game in
+            <span class="time"></span>second!</h3>
         <p>
-            with <span class="moves"></span> Moves and <span class="star"></span><br>
-            Woooooo!
+            with
+            <span class="moves"></span> Moves and
+            <span class="star"></span>
+            <br> Woooooo!
         </p>
         <button>Play again!</button>
     </div>
     <script src="js/app.js"></script>
 </body>
+
 </html>
