--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
                 <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
             </ul>
 
-            <span class="moves">0</span> Moves
-
+            <span class="moves">0  </span> Moves 
+            <span>
+                <i class="fa fa-clock-o"></i>
+                <span class="time"> </span>
+            </span>
             <div class="restart">
                 <i class="fa fa-repeat"></i>
             </div>
