style : changed some words

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="gameover" style="display:none">
         <i class="fa fa-check-circle"></i>
         <h3>Congratulations! You Won this game in
-            <span class="time"></span>second!</h3>
+            <span class="time"></span> seconds!</h3>
         <p>
             with
             <span class="moves"></span> Moves and
