--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <header>
             <h1>Matching Game</h1>
         </header>
-
+<!--displays stars-->
         <section class="score-panel">
-            <ul class="stars">
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
+            <ul class="stars"> 
+                <li id="star_1"><i class="fa fa-star"></i></li>
+                <li id="star_2"><i class="fa fa-star"></i></li>
+                <li id="star_3"><i class="fa fa-star"></i></li>
+                <li id="star_4"><i class="fa fa-star"></i></li>
+                <li id="star_5"><i class="fa fa-star"></i></li>
             </ul>
-
-            <span class="moves">0  </span> Moves 
-            <span>
+<!--score and time -->
+            <span class="moves">0  </span> Moves
+            <span class = 'timer'>
                 <i class="fa fa-clock-o"></i>
                 <span class="time"> </span>
             </span>
@@ -35,52 +35,52 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
+            <li class="card" id="1">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="2">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="3">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="4">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="5">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="6">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="7">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="8">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="9">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="10">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="11">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="12">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="13">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="14">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="15">
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" id="16">
                 <i class="fa"></i>
             </li>
         </ul>
