added eventListner + Animate.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <!-- added animate.css for the css animations , src = https://daneden.github.io/animate.css/ -->
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 
