--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves">3</span> Moves
