--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li class="star"><i class="fa fa-star"></i></li>
+        		<li class="star"><i class="fa fa-star"></i></li>
+        		<li class="star"><i class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves"></span> Moves
