add timer html,add startTimer func,mod endGame func, mod call to endGame

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         	<span class="moves"></span> Moves
 
+          <span id="minutes"></span>:<span id="seconds"></span>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
