--- a/index.html
+++ b/index.html
@@ -2,41 +2,41 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Matching Game</title>
-  <meta name="description" content="">
-  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-  <link rel="stylesheet" href="css/app.css">
+     <meta charset="utf-8">
+     <title>Matching Game</title>
+     <meta name="description" content="">
+     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
 
-  <div class="container">
-    <header>
-      <h1>Matching Game</h1>
-    </header>
+     <div class="container">
+          <header>
+               <h1>Matching Game</h1>
+          </header>
 
-    <section class="score-panel">
-      <ul class="stars">
-        <li class="star"><i class="fa fa-star"></i></li>
-        <li class="star"><i class="fa fa-star"></i></li>
-        <li class="star"><i class="fa fa-star"></i></li>
-      </ul>
+          <section class="score-panel">
+               <ul class="stars">
+                    <li class="star"><i class="fa fa-star"></i></li>
+                    <li class="star"><i class="fa fa-star"></i></li>
+                    <li class="star"><i class="fa fa-star"></i></li>
+               </ul>
 
-      <span class="moves"></span> Moves
+               <span class="moves"></span> Moves
 
-      <span id="minutes"></span>:<span id="seconds"></span>
+               <span id="minutes">00</span>:<span id="seconds">00</span>
 
-      <div class="restart">
-        <i class="fa fa-repeat"></i> Restart
-      </div>
-    </section>
+               <div class="restart">
+                    <i class="fa fa-repeat"></i> Restart
+               </div>
+          </section>
 
-    <ul class="deck"></ul>
-  </div>
+          <ul class="deck"></ul>
+     </div>
 
-  <script src="js/app.js"></script>
+     <script src="js/app.js"></script>
 </body>
 
 </html>
