--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         	</ul>
 
         	<span class="moves">3</span> Moves
-
+			<div id="timer">00:00:00</div>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
