--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
+        	<ul class="stars" id="score">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
@@ -26,8 +26,8 @@
 
         	<span class="moves" id="moves"></span> Moves
 
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
+            <div class="restart" id="restart">
+        		<i class="fas fa-redo">      Start a new game.</i>
         	</div>
         </section>
 
