--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
       <span class="moves">3</span> Moves
 
+      <span class="clock">0:00</span>
+
       <div class="restart">
         <i class="fa fa-repeat"></i>
       </div>
