--- a/index.html
+++ b/index.html
@@ -24,14 +24,31 @@
         <li><i class="fa fa-star"></i></li>
       </ul>
 
-      <span class="moves">3</span> Moves
+      <span class="moves">0</span> Moves
 
-      <span class="clock">0:00</span>
+      <span class="timer">0:00</span>
 
       <div class="restart">
         <i class="fa fa-repeat"></i>
       </div>
     </section>
+
+    <div class="modal">
+      <div class="modal_title">
+        <h3 class="results">Your Results!</h3>
+      </div>
+      <div class="modal_results">
+        <span class="modal_time">Time: </span>
+        <span class="modal_moves">Moves: </span>
+        <span class="modal_stars">Stars: </span>
+      </div>
+      <div class="modal_buttons">
+        <button class="button modal_exit">Exit</button>
+        <button class="button modal_replay">Play Again</button>
+      </div>
+
+
+    </div>
 
     <ul class="deck">
       <li class="card">
