--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </section>
 
-    <div class="modal">
+    <div class="modal hide">
       <div class="modal_title">
         <h3 class="results">Your Results!</h3>
       </div>
