--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+
 </head>
 <body>
 
@@ -22,6 +23,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
+          <span class="timer">0:00</span>
         	<span class="moves">0</span> Moves
 
             <div class="restart">
