deck array and flip update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         	</ul>
 
         	<span class="moves">3</span> Moves
-        <label id="minutes">00</label>:<label id="seconds">00</label>
+        <label id="minutes" class="score-panel clock">00</label>:<label id="seconds">00</label>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
