--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -23,7 +24,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-          <span class="timer">0:00</span>
+          <span class="timer">0</span> Seconds
         	<span class="moves">0</span> Moves
 
             <div class="restart">
