bug: Timer/Reset fixed timer and reset have been repaired - the reset function was not being called when the DOM element was being selected.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <span class="timer">0</span> Seconds
         	<span class="moves">0</span> Moves
 
-            <div class="restart">
+            <span class="restart">
         		<i class="fa fa-repeat"></i>
-        	</div>
+        	</span>
         </section>
 
         <ul class="deck">
