--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </li>
         </ul>
     </div>
-
     <script src="js/app.js"></script>
+        <script src="js/easytimer.min.js"></script>
+
 </body>
 </html>
