--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+           <h1>Matching Game</h1>
         </header>
 
         <section class="score-panel">
@@ -80,8 +80,10 @@
             </li>
         </ul>
     </div>
+      <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="lib/easytimer/dist/easytimer.min.js"></script>
     <script src="js/app.js"></script>
-        <script src="js/easytimer.min.js"></script>
-
-</body>
-</html>
+    </body> </html>
