--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script src="lib/easytimer/dist/easytimer.min.js"></script>
+  <script src="js/easytimer.js"></script>
     <script src="js/app.js"></script>
     </body> </html>
