feat: add modal modal functionality added, currently kicked off wit ha button press. Fixes necessary to implement modal trigger by winState

--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
 
         </ul>
     </div>
+  <!-- Modal HTML -->
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Open Modal</button>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+    
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
