test: create branch to rework timer creating a stopwatch which will actually start/stop on commands

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-          <span class="timer">0</span> Seconds
+          <p><span id="seconds">00</span>:<span id="tens">00</span></p>
         	<span class="moves">0</span> Moves
 
             <span class="restart">
@@ -38,11 +38,13 @@
     </div>
   <!-- Modal HTML -->
     <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Open Modal</button>
+  <!-- BUTTON COMMENTED OUT TO TEST
+
+   <button id="myBtn">Open Modal</button> -->
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-    
+
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
