fix: new stopwatch implemented stopwatch timing correctly, move to make the stop and record score func as well as reset functional next.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-          <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-        	<span class="moves">0</span> Moves
+          <span class="moves">0</span> Moves
+
+          <span class="stopwatch">
+                 <span id="seconds">00</span>:<span id="tens">00</span>
+             </span>
+
 
             <span class="restart">
         		<i class="fa fa-repeat"></i>
