--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div id="myModal" class="modal">
 
       <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+      <div class="final-score">
+      <span class="close">&times;</span>
+        <p id=modalText>Some text in the Modal..</p>
       </div>
 
     </div>
