fix: modal CSS repaired all content for win state now fits in box correctly - next step change the UL items to exclude bullets

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
     <div id="myModal" class="modal">
 
       <!-- Modal content -->
-      <div class="final-score">
-      <span class="close">&times;</span>
-        <p id=modalText>Some text in the Modal..</p>
+      <div class="modal-content">
+        <div class="final-score">
+          <span class="close">&times;</span>
+            <p id=modalText>Some text in the Modal..</p>
+        </div>
       </div>
 
     </div>
