feat: modal complete - play again complete all functionality in rubric plus extra complete, clean up code, create readme and submit - merge to master

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="modal-content">
         <div class="final-score">
           <span class="close">&times;</span>
-            <p id=modalText>Some text in the Modal..</p>
+            <p id=modalText>Error!</p>
         </div>
       </div>
 
