--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <a href="https://github.com/Jlevett/Memory-Game-Project" id='icons'><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
     <div class="container">
         <header>
           <h1>Matching Game</h1>
