initial commit and css animation

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>memory game</h1>
         </header>
 
         <section class="score-panel">
@@ -30,7 +30,7 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
+            <li class="card show open">
                 <i class="fa fa-diamond"></i>
             </li>
             <li class="card">
@@ -66,7 +66,7 @@
             <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+            <li class="card show open ">
                 <i class="fa fa-bolt"></i>
             </li>
             <li class="card">
