Add viewport tag for responsive

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Matching Game</title>
         <meta name="description" content="">
         <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -10,8 +11,8 @@
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/animate.css">
     </head>
-    <body>
-        <div class="container">
+    <body>    
+    <div class="container">
             <header>
                 <h1>memory game</h1>
             </header>
