--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,18 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>    
-    <div class="container">
+    
             <header>
-                <h1>memory game</h1>
+                <div class="text-center">
+                    <h1 class="header">memory game</h1>
+                </div>
+                
             </header>
-            <section class="score-panel">
+            <div class="container">
+            <section class="score-panel mb-3 text-left">
                 <ul class="stars">
                     <li><i class="fa fa-star"></i></li>
                     <li><i class="fa fa-star"></i></li>
@@ -26,7 +31,7 @@
                 <div class="timer">
                     <span class="min">00</span>:<span class="sec">00</span>
                 </div>
-                <div class="restart">
+                <div class="restart float-right mr-5">
                     <i class="fa fa-repeat"></i>
                 </div>
             </section>
@@ -38,17 +43,17 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Congratualations</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closesign">
+                        <h3 class="modal-title text-center" id="exampleModalLongTitle">Congratualations</h3>
+                        <button type="button" class="close font-weight-bold" data-dismiss="modal" aria-label="Close" id="closesign">
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body px-2 py-1">
                         <p class="comment"></p>
                         <ul class="modal-stars">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
+                            <li class="px-1"><i class="fa fa-star"></i></li>
+                            <li class="px-1"><i class="fa fa-star"></i></li>
+                            <li class="px-1"><i class="fa fa-star"></i></li>
                         </ul>
                         <p>You matched all cards in <span id="total-time">0</span>.</p>
                     </div>
