Add moves to win popup

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                             <li class="px-1"><i class="fa fa-star"></i></li>
                             <li class="px-1"><i class="fa fa-star"></i></li>
                         </ul>
-                        <p>You matched all cards in <span id="total-time">0</span>.</p>
+                        <p>You matched all cards in <span id="total-time">0</span> in <span id="total-moves">0</span> Moves.</p>
                     </div>
                     <div class="modal-footer">
                        <button type="button" class="btn btn-primary" id="modal-playagain">Play Again</button>
