--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h3 class="modal-title text-center" id="exampleModalLongTitle">Congratualations</h3>
-                        <button type="button" class="close font-weight-bold" data-dismiss="modal" aria-label="Close" id="closesign">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closesign">
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -58,8 +58,8 @@
                         <p>You matched all cards in <span id="total-time">0</span> in <span id="total-moves">0</span> Moves.</p>
                     </div>
                     <div class="modal-footer">
-                       <button type="button" class="btn btn-primary" id="modal-playagain">Play Again</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                       <button type="button" class="btn btn-primary px-2" id="modal-playagain">Play Again</button>
+                        <button type="button" class="btn btn-danger px-2" data-dismiss="modal">Close</button>
                         
                     </div>
                 </div>
