Typo fixed in popup

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                             <li class="px-1"><i class="fa fa-star"></i></li>
                             <li class="px-1"><i class="fa fa-star"></i></li>
                         </ul>
-                        <p>You matched all cards in <span id="total-time" class="font-weight-bold">0</span> in <span id="total-moves" class="font-weight-bold">0</span> Moves.</p>
+                        <p>You matched all cards in <span id="total-time" class="font-weight-bold">0</span> in <span id="total-moves" class="font-weight-bold">0</span></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary px-2" id="modal-playagain">Play Again</button>
