--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
+    <title>Matching Game by Sayantan</title>
     <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
@@ -12,7 +13,7 @@
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
         <section class="score-panel">
@@ -24,63 +25,86 @@
 
         	<span class="moves">3</span> Moves
 
-            <div class="restart">
+          <div class="timer">
+
+          </div>
+
+            <div class="restart" onclick=startGame()>
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
 
-        <ul class="deck">
-            <li class="card">
+        <ul class="deck" id="card-deck">
+            <li class="card" type="diamond">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card" type="bolt">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card"type="cube">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li class="card match" type="anchor">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card" type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card" type="bicycle">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card" type="diamond">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+            <li class="card" type="leaf">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+            <li class="card open show" type="bolt">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card" type="bicycle">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+            <li class="card" type="cube">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+        <div id="popup1" class="overlay">
+            <div class="popup">
+                <h2>Congratulations 🎉</h2>
+                <a class="close" href=# >×</a>
+                <div class="content-1">
+                    Congratulations you're a winner 🎉🎉
+                </div>
+                <div class="content-2">
+                    <p>You made <span id=finalMove> </span> moves </p>
+                    <p>in <span id=totalTime> </span> </p>
+                    <p>Rating:  <span id=starRating></span></p>
+                </div>
+                <button id="play-again"onclick="playAgain()">
+                    Play again 😄</a>
+                </button>
+            </div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
+    <p align=center>Made by <a href="http://sayantan.cf">Sayantan Datta</a></p>
+
 </body>
 </html>
