added timer function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <li><i class="fa fa-star"></i></li>
       </ul>
 
+      <span class="separator"> |&nbsp; </span>
+
+      <!-- REMOVED SECS AND MINS TO MAKE THEM ALL JS -->
+      <span id="timer"></span>
+
+      <span class="separator"> &nbsp;|&nbsp; </span>
+
       <span id="num-of-moves">0</span> <span id="moves">Moves</span>
 
       <div class="restart">
