winning condition modal created. Related #6

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         </ul>
     </div>
 
+    <section class="modal">
+        <div class="wrapper">
+        <img src="https://media.giphy.com/media/26BkNituin1dca6GI/giphy.gif" alt="gif you won!">
+        <h1>Congratulations!!</h1>
+        <h1>You won!!</h1>
+        <button>Play again</button>
+        </div>
+    </section>
+
     <script src="js/app.js"></script>
 </body>
 </html>
