Implemented move counter. Related to #7

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <li><i class="fa fa-star"></i></li>
                <li><i class="fa fa-star"></i></li>
             </ul>
-            <span class="moves">3</span> Moves
+            <span class="moves">0</span> Moves
             <div class="restart">
                <i class="fa fa-repeat"></i>
             </div>
@@ -32,6 +32,7 @@
             <img src="https://media.giphy.com/media/26BkNituin1dca6GI/giphy.gif" alt="gif you won!">
             <h1>Congratulations!!</h1>
             <h1>You won!!</h1>
+            <h3 class="results"></h3>
             <button>Play again</button>
          </div>
       </section>
