--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
             <h1>Matching Game</h1>
          </header>
          <section class="score-panel">
-            <ul class="stars">
-               <li><i class="fa fa-star"></i></li>
-               <li><i class="fa fa-star"></i></li>
-               <li><i class="fa fa-star"></i></li>
-            </ul>
+            <div class="rating-box">
+                <div class="rating"></div>
+            </div>
             <span class="moves">0</span> Moves
             <div class="restart">
                <i class="fa fa-repeat"></i>
