Added restart button logic. Close #7

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <span class="moves">0</span> Moves
             <div class="restart">
-               <i class="fa fa-repeat"></i>
+               <i class="fa fa-repeat"></i><span>Restart!</span>
             </div>
          </section>
          <ul class="deck">
