Added timer display. Close #17

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          </header>
          <section class="score-panel">
             <div class="rating-box">
-                <div class="rating"></div>
+               <div class="rating"></div>
             </div>
             <span class="moves">0</span> Moves
             <div class="restart">
@@ -24,6 +24,9 @@
          </section>
          <ul class="deck">
          </ul>
+         <div class="timer">
+            <i class="fa fa-clock-o"></i><span>0.0 secs</span>
+         </div>
       </div>
       <section class="modal">
          <div class="wrapper">
