--- a/index.html
+++ b/index.html
@@ -31,52 +31,52 @@
 
         <ul class="deck">
             <li class="card">
-                <i class="fa fa-diamond"></i>
+                <i class="fa fa-diamond faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
+                <i class="fa fa-paper-plane-o faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bolt"></i>
+                <i class="fa fa-anchor faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
+                <i class="fa fa-bolt faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <i class="fa fa-cube faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <i class="fa fa-anchor faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-diamond"></i>
+                <i class="fa fa-leaf faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
+                <i class="fa fa-bicycle faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <i class="fa fa-diamond faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
+                <i class="fa fa-bomb faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bolt"></i>
+                <i class="fa fa-leaf faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <i class="fa fa-bomb faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
+                <i class="fa fa-bolt faCard"></i>
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
+                <i class="fa fa-bicycle faCard"></i>
+            </li>
+            <li class="card">
+                <i class="fa fa-paper-plane-o faCard"></i>
+            </li>
+            <li class="card">
+                <i class="fa fa-cube faCard"></i>
             </li>
         </ul>
     </div>
