Congratulations Popup JS

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         	</div>
         </section>
 
-        <ul class="deck">
+
+            <div class="CongratulationsPopup">
+               <h1>Congratulations! You Won!</h1>
+               <p class=CongratText></p>
+               <button id="playButton">Play again!</button>
+            </div>
+
+
+
+         <ul class="deck">
             <li class="card">
                 <i class="fa fa-diamond faCard"></i>
             </li>
@@ -79,6 +88,7 @@
                 <i class="fa fa-cube faCard"></i>
             </li>
         </ul>
+
     </div>
 
     <script src="js/app.js"></script>
