--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         	</ul>
 
         	<span class="moves"></span> Moves
+          <div id="timer"></div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -30,9 +31,9 @@
         </section>
 
 
-            <div class="CongratulationsPopup">
+            <div class="congratulationsPopup">
                <h1>Congratulations! You Won!</h1>
-               <p class=CongratText></p>
+               <p class=congratText></p>
                <button id="playButton">Play again!</button>
             </div>
 
