Congratulation page CSS and stars counter

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
@@ -16,18 +17,21 @@
         </header>
 
         <section class="score-panel">
+
         	<ul class="stars">
         		<li><i id="thirdStar" class="fa fa-star"></i></li>
         		<li><i id="secondStar"class="fa fa-star"></i></li>
         		<li><i id="firstStar"class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves"></span> Moves
-          <div id="timer"></div>
-
+          	<span class="moves">0 Moves</span>
+            <div id="timerBox">
+            <div id="timer">0:00</div>
+           </div>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
+
         </section>
 
 
