--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
 </head>
 <body>
 
@@ -16,12 +17,12 @@
             <h1>Matching Game</h1>
         </header>
 
-        <section class="score-panel">
+        <div class="scorePanel">
 
         	<ul class="stars">
         		<li><i id="thirdStar" class="fa fa-star"></i></li>
-        		<li><i id="secondStar"class="fa fa-star"></i></li>
-        		<li><i id="firstStar"class="fa fa-star"></i></li>
+        		<li><i id="secondStar" class="fa fa-star"></i></li>
+        		<li><i id="firstStar" class="fa fa-star"></i></li>
         	</ul>
 
           	<span class="moves">0 Moves</span>
@@ -32,7 +33,7 @@
         		<i class="fa fa-repeat"></i>
         	</div>
 
-        </section>
+        </div>
 
 
             <div class="congratulationsPopup">
