put back match open show classes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Matching Game</title>
@@ -39,7 +39,7 @@
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+            <li class="card match">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
@@ -48,7 +48,7 @@
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card">
+            <li class="card match">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
@@ -69,7 +69,7 @@
             <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+            <li class="card open show">
                 <i class="fa fa-bolt"></i>
             </li>
             <li class="card">
