Add moves counter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<div class="moves"><span class="count"></span> moves</div>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
