--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
         	<div class="moves"><span class="count"></span> moves</div>
 
+            <div class="timer">
+                <spam class="minutes"></spam>
+                <spam>:</spam>
+                <spam class="seconds"></spam>
+            </div>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
