--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
+<!--language-->
 <html lang="en">
 <head>
+    <!-- meta required -->>
     <meta charset="utf-8">
+    <!--title-->
     <title>Matching Game</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
