Updating scripts to vanilla js

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="summary">
                     <p>The goal of this game is to find all pairs of each card with the least number of moves.</p>
                 </div>
-                <button id="play">Got it!</button>
+                <button id="play">Ok! Got it!</button>
             </div>
         </div>
 
